--- a/dona_front/src/styles/admin.css
+++ b/dona_front/src/styles/admin.css
@@ -41,8 +41,10 @@ body {
 }
 
 .main-content {
-  padding: 1.5rem;
+  margin-top: 0.7rem;   /* opcional: más cerca del topbar */
   overflow-y: auto;
+  margin-left: 3rem;
+  margin-right: 2rem;
   flex: 1;
 }
 
