--- a/dona_front/src/styles/admin.css
+++ b/dona_front/src/styles/admin.css
@@ -361,3 +361,30 @@ html {
   pointer-events: none;
   z-index: 0;
 }
+
+
+.guardar-btn {
+  display: block;
+  background-color: #f07d0b;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 1rem;
+  font-weight: 500;
+  transition: background-color 0.3s ease;
+  margin: 1.5rem auto 2rem auto; /* margen arriba y abajo, y centrado horizontal */
+  width: 100%;
+  max-width: 500px;
+  text-align: center;
+}
+
+.guardar-btn:hover {
+  background-color: #d66f09;
+}
+
+
+.main-content {
+  padding-bottom: 20px; /* o el valor que prefieras */
+}
