--- a/dona_front/src/styles/admin.css
+++ b/dona_front/src/styles/admin.css
@@ -498,10 +498,18 @@ html {
   padding: 6px 16px;
   border-radius: 20px;
   font-weight: 600;
-  margin-bottom: 1rem;
+  margin-bottom: 1.3rem;
   font-size: 1rem;
 }
 
+
+
+
+.form-group label {
+  margin-bottom: 6px;
+  display: block;
+  font-weight: bold;
+}
 
 
 
@@ -581,6 +589,7 @@ html {
   font-size: 0.95rem;
   color: #333;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.05);
+  margin-top: 100px ;
 }
 
 
@@ -669,7 +678,7 @@ table {
   border-radius: 8px;
   padding: 12px;
   margin-bottom: 20px;
-  margin-top: -6px;
+  margin-top: 18px;
   font-size: 0.95rem;
 }
 
@@ -711,4 +720,13 @@ table {
 
 .cancelar-btn:hover {
   background-color: #c0392b;
+}
+
+
+
+
+
+.info-icon {
+  margin-right: 6px;
+  color: #000; /* Negro */
 }
