--- a/dona_front/src/pages/Login/Login.css
+++ b/dona_front/src/pages/Login/Login.css
@@ -43,7 +43,7 @@
 .logo {
   display: flex;
   align-items: center;
-  gap: 15px;
+  gap: 10px;
   margin-bottom: 25px;
   justify-content: center;
 }
@@ -52,14 +52,16 @@
   height: 50px;
   border-radius: 50%;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    height: auto;
 }
 
-h1 {
-  font-size: 1.8rem;
-  color: #c00107;
-  text-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+.titulo-dona {
+  color: #c00107; /* rojo fuerte */
+  font-weight: bold;
+  font-size: 2rem;
+  text-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
+    margin-top: 60px; /* Ajusta este valor según lo que necesites */
 }
-
 h2 {
   font-size: 1.6rem;
   margin-bottom: 25px;
