--- a/dona_front/src/styles/admin.css
+++ b/dona_front/src/styles/admin.css
@@ -2124,3 +2124,87 @@ table {
 
 
 
+
+
+
+
+.config-btn:focus {
+  outline: none;
+  box-shadow: none;
+}
+
+.topbar-button {
+  text-decoration: none !important;
+}
+
+
+
+.tarjeta-dashboard2 {
+  background: #ffffff;
+  padding: 1.5rem;
+  border-radius: 1rem;
+  box-shadow: 0 4px 12px rgba(0,0,0,0.08);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  white-space: pre-line;
+  font-size: 0.95rem;
+  margin-bottom: 30px !important;
+  z-index: 1;
+}
+
+
+
+.tarjeta-dashboard2 h3 {
+  margin-bottom: 0.6rem;
+  color: #1e4720;
+  font-size: 1.1rem;
+}
+
+
+.modo-oscuro {
+  background-color: #1b1b1b !important;
+  color: #e0e0e0;
+}
+
+.tarjeta-dashboard2.oscura {
+  background-color: #2c2c2c;
+  color: #ffffff;
+  box-shadow: 0 4px 12px rgba(255, 255, 255, 0.1);
+}
+
+.modo-oscuro-toggle {
+  margin: 1rem 0;
+  padding: 0.5rem 1rem;
+  background-color: #1e4720;
+  color: white;
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
+  font-size: 0.9rem;
+  transition: background-color 0.3s ease;
+}
+
+.modo-oscuro-toggle:hover {
+  background-color: #2f6830;
+}
+
+
+
+
+
+.exportar-btn {
+  padding: 6px 14px;
+  font-size: 14px;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+  color: white;
+  font-weight: bold;
+  background-color: #1d6110; /* azul vivo */
+  transition: background-color 0.2s ease;
+}
+
+.exportar-btn:hover {
+  background-color: #58971d;
+}
